// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : Homepage : Press logos renders correctly 1`] = `
<div
  className="homepage-press-logos logos undefined"
>
  <p
    className="a11y-only"
  >
    News organizations including The New York Times, The Washington Post, CNN, Vox, ProPublica, and The Wall Street Journal use our data in their reporting.
  </p>
  <img
    alt="test A logo"
    aria-hidden={true}
    src="/images/press-logos/test-a.png"
  />
  <img
    alt="test B logo"
    aria-hidden={true}
    src="/images/press-logos/test-b.png"
  />
  <img
    alt="test C logo"
    aria-hidden={true}
    src="/images/press-logos/test-c.png"
  />
</div>
`;

exports[`Components : Pages : Homepage : Press logos renders correctly 2`] = `
<div
  className="homepage-press-logos logos undefined"
>
  <p
    className="a11y-only"
  >
    News organizations including The New York Times, The Washington Post, CNN, Vox, ProPublica, and The Wall Street Journal use our data in their reporting.
  </p>
  <img
    alt="test B logo"
    aria-hidden={true}
    src="/images/press-logos/test-b.png"
  />
  <img
    alt="test C logo"
    aria-hidden={true}
    src="/images/press-logos/test-c.png"
  />
</div>
`;

exports[`Components : Pages : Homepage : Press logos renders correctly 3`] = `
<div
  className="homepage-press-logos logos extraMargin"
>
  <p
    className="a11y-only"
  >
    News organizations including The New York Times, The Washington Post, CNN, Vox, ProPublica, and The Wall Street Journal use our data in their reporting.
  </p>
  <img
    alt="test A logo"
    aria-hidden={true}
    src="/images/press-logos/test-a.png"
  />
  <img
    alt="test B logo"
    aria-hidden={true}
    src="/images/press-logos/test-b.png"
  />
  <img
    alt="test C logo"
    aria-hidden={true}
    src="/images/press-logos/test-c.png"
  />
</div>
`;
